# DATASCI112

./: .gitignore  README.md  pyproject.toml
week1/: 1.1.introduction_to_data.ipynb  1.2.introduction_to_notebooks_and_colab.ipynb  1.3.relationships_between_categorical_variable.ipynb  1.4.comparing_covid_fatalities.ipynb  1.5.quantitative_variables.ipynb
week10/: 10.1.choropleths.ipynb  10.2.practice-making-choropleths.ipynb
week2/: 2.1.the-split-apply-combine-paradigm.ipynb  2.2.whos-faster--usain-bolt-or-michael-phelps.ipynb  2.3.multivariate_data_and_the_grammar_of_graphics.ipynb  2.4.2000-u.s.-presidential-election-in-florida.ipynb  2.5.distances-between-observations.ipynb
week3/: 3.1.encoding-categorical-variables-as-quantitative.ipynb  3.2.recommending-colleges.ipynb  3.3.textual-data-and-the-bag-of-words-representation.ipynb  3.4.textual-data-vector-space-model-and-tf-idf.ipynb
week4/: 4.1.introduction-to-machine-learning.ipynb  4.2.cars-and.fuel-efficiency.ipynb  4.3.who-wrote-the-gospels.ipynb
week5/: 5.1.k-nearest-neighbors.ipynb  5.2.predicting-house-prices.ipynb  5.3.evaluating-regression-models.ipynb  5.4.evaluating-house-price-models.ipynb  5.5.model-selection-and-hyperparameter-tuning.ipynb
week6/: 6.1.classification-and-k-nearest-neighbors.ipynb  6.2.handwritten-digit-classification.ipynb  6.3.evaluating-classification-models.ipynb  6.4.predicting-online-shopping-behavior.ipynb  6.5.unsupervised-learning-and-k-means-clustering.ipynb
week7/: 7.1.hierarchical-data.ipynb  7.2.web-scraping.ipynb
week8/: 8.1.combining-data-sets.ipynb  (+3 more)
(+29 files in other folders)
