[project]
name = "datasci112"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "contextily>=1.6.2",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "lxml>=6.0.1",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
]
